fix bug with brand ethos content clipping inside footer content on mobile environment

--- a/brandethos.css
+++ b/brandethos.css
@@ -1,6 +1,7 @@
 /* brand ethos */
 #brand-ethos{
-    height:600px;
+    height:auto;
+    padding-bottom: 500px;
 }
 
 #left-about{
